--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\TutorialPlayer.cs" />
     <Compile Include="Assets\Scripts\GridMatrix.cs" />
     <Compile Include="Assets\Scripts\Retry.cs" />
+    <Compile Include="Assets\Scripts\Goal.cs" />
     <Compile Include="Assets\Scripts\ContentPreviews\Accessory\MotorWheelPreview.cs" />
     <Compile Include="Assets\Scripts\ContentPreviews\Accessory\WheelPreview.cs" />
     <Compile Include="Assets\Scripts\Level.cs" />
@@ -97,7 +98,6 @@
     <Compile Include="Assets\Scripts\UIScripts\ViewCanvasDrag.cs" />
     <Compile Include="Assets\Scripts\EventBus.cs" />
     <Compile Include="Assets\Scripts\UIScripts\LevelButton.cs" />
-    <Compile Include="Assets\Scripts\GoalReached.cs" />
     <Compile Include="Assets\Scripts\UIScripts\ImageDragHandler.cs" />
     <Compile Include="Assets\Scripts\UIScripts\Layers.cs" />
     <Compile Include="Assets\Scripts\UIScripts\FirstPerson.cs" />
